tests/valid/Function_Valid_4.wys
type fr4nat is int

function g(fr4nat x) => fr4nat:
    return x + 1

function f(fr4nat x) => int:
    return x

function main() => void:
    int y = 1
    print f(g(y))

