tests/errors/Parser/ErrorRecoveryTest.wys
void f():
	42+1 = 43

type record is {
	int x,
	int x
}

void g(int x):
 print x
  print x

type answer is 42

void h(int x):

void i():
 f(type)

void j()
	return